package entities;

public class Contribuyente {
    private String nombre;
    private String apellido;
    private Integer edad;

    public Contribuyente(String nombre, String apellido, Integer edad) {
        this.nombre = nombre;
        this.apellido = apellido;
        this.edad = edad;
    }
}