package entities;

public enum Formato {
    AUDIO,
    VIDEO,
    IMAGEN
}
