package entities;

public enum Origen {
    MANUAL,
    DATASET,
    CONTRIBUYENTE
}
